--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,10 @@ idna==3.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+psycopg2==2.8.6
 PyMySQL==1.0.2
 SQLAlchemy==1.4.16
 visitor==0.1.3
 Werkzeug==2.0.1
 WTForms==2.3.3
-psycopg2==2.8.6
+WTForms-SQLAlchemy==0.2
